--- a/src/bundle/Core/Resources/config/papi.yml
+++ b/src/bundle/Core/Resources/config/papi.yml
@@ -17,9 +17,13 @@ services:
             - Ibexa\Core\Repository\Repository
             - '%ibexa.api.role.policy_map%'
             - '@Ibexa\Contracts\Core\Repository\LanguageResolver'
+            - '@event_dispatcher'
+            - '@Ibexa\Core\Repository\Helper\SchemaIdentifierExtractor'
             - "@?logger"
         calls:
             - [setContainer, ["@service_container"]]
+
+    Ibexa\Core\Repository\Helper\SchemaIdentifierExtractor: ~
 
     Ibexa\Bundle\Core\ApiLoader\StorageEngineFactory:
         class: Ibexa\Bundle\Core\ApiLoader\StorageEngineFactory
