Defined NameSchemaService as DIC Service

--- a/src/lib/Resources/settings/events.yml
+++ b/src/lib/Resources/settings/events.yml
@@ -5,3 +5,5 @@ services:
         public: false
 
     Ibexa\Core\Repository\EventSubscriber\DeleteUserSubscriber: ~
+
+    Ibexa\Core\Repository\EventSubscriber\NameSchemaSubscriber: ~
