--- a/src/lib/Resources/settings/repository/inner.yml
+++ b/src/lib/Resources/settings/repository/inner.yml
@@ -3,38 +3,23 @@ parameters:
 
     # intentionally defined class parameter to be used by the Repository Factory
 services:
-    Ibexa\Bundle\Core\ApiLoader\RepositoryFactory:
-        class: Ibexa\Core\Base\Container\ApiLoader\RepositoryFactory
+    Ibexa\Contracts\Core\Repository\RepositoryFactory:
+        alias: Ibexa\Core\Base\Container\ApiLoader\RepositoryFactory
+
+    Ibexa\Core\Base\Container\ApiLoader\RepositoryFactory:
+        autowire: true
+        autoconfigure: true
         arguments:
-            - Ibexa\Core\Repository\Repository
-            - '%ibexa.api.role.policy_map%'
-            - '@Ibexa\Contracts\Core\Repository\LanguageResolver'
-        calls:
-            - [setContainer, ["@service_container"]]
+            $searchHandler: '@ibexa.spi.search'
+            $policyMap: '%ibexa.api.role.policy_map%'
+            $backgroundIndexer: '@Ibexa\Bundle\Core\EventListener\BackgroundIndexingTerminateListener'
+            $thumbnailStrategy: '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
+            $proxyDomainMapperFactory: '@Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperFactory'
 
     Ibexa\Core\Repository\Repository:
-        factory: ['@Ibexa\Bundle\Core\ApiLoader\RepositoryFactory', buildRepository]
-        arguments:
-            - '@ibexa.api.persistence_handler'
-            - '@ibexa.spi.search'
-            - '@Ibexa\Bundle\Core\EventListener\BackgroundIndexingTerminateListener'
-            - '@Ibexa\Core\Repository\Helper\RelationProcessor'
-            - '@Ibexa\Core\FieldType\FieldTypeRegistry'
-            - '@Ibexa\Core\Repository\User\PasswordHashService'
-            - '@Ibexa\Core\Repository\Strategy\ContentThumbnail\ThumbnailChainStrategy'
-            - '@Ibexa\Core\Repository\ProxyFactory\ProxyDomainMapperFactory'
-            - '@Ibexa\Core\Repository\Mapper\ContentDomainMapper'
-            - '@Ibexa\Core\Repository\Mapper\ContentTypeDomainMapper'
-            - '@Ibexa\Core\Repository\Mapper\RoleDomainMapper'
-            - '@Ibexa\Core\Repository\Mapper\ContentMapper'
-            - '@Ibexa\Contracts\Core\Repository\Validator\ContentValidator'
-            - '@Ibexa\Core\Repository\Permission\LimitationService'
-            - '@Ibexa\Contracts\Core\Repository\PermissionService'
-            - '@Ibexa\Contracts\Core\Persistence\Filter\Content\Handler'
-            - '@Ibexa\Contracts\Core\Persistence\Filter\Location\Handler'
-            - '@Ibexa\Core\Repository\User\PasswordValidatorInterface'
-            - '@ibexa.config.resolver'
-            - '%languages%'
+        autowire: true
+        autoconfigure: true
+        factory: ['@Ibexa\Core\Base\Container\ApiLoader\RepositoryFactory', buildRepository]
 
     Ibexa\Core\Repository\ContentService:
         class: Ibexa\Core\Repository\ContentService
